# earcutr

./: Cargo.toml  OPTO.md  README.md
.github/workflows/: ci.yml
benches/: speedtest.rs
benches/benchoutput/: bad_diagonals.js  bad_hole.js  building.js  degenerate.js  dude.js  eberly_3.js  eberly_6.js  hilbert.js  hole_touching_outer.js  issue16.js  issue17.js  issue29.js  issue34.js  issue35.js  issue45.js  issue52.js  issue83.js  outside_ring.js  self_touching.js  shared_points.js  simplified_us_border.js  steiner.js  touching_holes.js  water_huge2.js
examples/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: earcut.rs
src/: legacy.rs  lib.rs  tests.rs
tests/: integration_test.rs
tests/fixtures/: filtered-bridge-jhl.json  infinite-loop-jhl.json  issue142.json  issue149.json
viz/testoutput/: filtered_bridge_jhl.js  infinite_loop_jhl.js  issue142.js  issue149.js
