[package]
name = "earcutr"
version = "0.1.1"
authors = ["don bright <hmbright@fastmail.com>"]
description = "port of MapBox's earcut triangulation code to Rust language"
repository = "https://github.com/frewsxcv/earcutr/"
license = "ISC"
edition = "2018"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
bencher ="0.1.5"

[[bench]]
name = "speedtest"
harness = false

# for profiling with standard tools, like
# Valgrind's Callgrind or Perf
[profile.release] 
debug = true
