[package]
name = "earcutr"
version = "0.4.3"
description = "port of MapBox's earcut triangulation code to Rust language"
repository = "https://github.com/frewsxcv/earcutr/"
license = "ISC"
edition = "2021"

[dependencies]
itertools = "0.11"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"

[[bench]]
name = "speedtest"
harness = false

# for profiling with standard tools, like
# Valgrind's Callgrind or Perf
[profile.release]
debug = true
